# jomfft

./: CMakeLists.txt  LICENSE  README.md
dft/jomfft/cdft/: BatchDft.c  BatchDft.h  BatchUtil.c  BatchUtil.h  CMakeLists.txt  Dft.c  Dft.h  InnerBatchDft.c  InnerBatchDft.h  MainDft.c  MainDft.h  StrideBatchDft.c  StrideBatchDft.h
dft/jomfft/cdft/bluestein/: BatchDft.c  BatchDft.h  Bluestein.h  CMakeLists.txt  Dft.c  Dft.h
dft/jomfft/cdft/cooleyturkey/: BatchDft.c  BatchDft.h  CMakeLists.txt  CooleyTurkey.h  Dft.c  Dft.h  TransposeDft.c  TransposeDft.h
dft/jomfft/cdft/core/: BatchMultiply.c  BatchMultiply.h  CMakeLists.txt  Core.h  InnerBatchDft.c  InnerBatchDft.h  PairSquareTwiddleDft.c  PairSquareTwiddleDft.h  SquareSplitTwiddleDft.c  SquareSplitTwiddleDft.h  StrideBatchDft.c  StrideBatchDft.h  TransposeDftTwiddle.c  TransposeDftTwiddle.h  TwiddleDft.c  TwiddleDft.h
dft/jomfft/cdft/singleton/: CMakeLists.txt  InnerBatchDft.c  InnerBatchDft.h  StrideBatchDft.c  StrideBatchDft.h
dft/jomfft/cdft/square/: BatchDft.c  BatchDft.h  BlockSize.h  CMakeLists.txt  Dft.c  Dft.h  LargeBatchDft.c  LargeBatchDft.h  LargeDft.c  LargeDft.h  NestedBatchDft.c  NestedBatchDft.h  NestedDft.c  NestedDft.h  PairTwiddleTranspose.c  PairTwiddleTranspose.h  SmallBatchDft.c  SmallBatchDft.h  SmallDft.c  SmallDft.h  SmallTransposeDft.c  SmallTransposeDft.h  Square.h  TwiddleTranspose.c  TwiddleTranspose.h
dft/jomfft/model/: CMakeLists.txt  ComplexCopy.c  ComplexCopy.h  ComplexFunction.c  ComplexFunction.h  ComplexFunctionBuffered.c  ComplexFunctionBuffered.h  ComplexFunctionBufferedLoop.c  ComplexFunctionBufferedLoop.h  ComplexFunctionBufferedNestedLoop.c  ComplexFunctionBufferedNestedLoop.h  ComplexFunctionBufferedPair.c  ComplexFunctionBufferedPair.h  ComplexFunctionBufferedTriple.c  ComplexFunctionBufferedTriple.h  ComplexFunctionLoop.c  ComplexFunctionLoop.h  ComplexFunctionPair.c  ComplexFunctionPair.h  ComplexFunctionPairW.c  ComplexFunctionPairW.h  ComplexFunctionTriple.c  ComplexFunctionTriple.h  ComplexFunctionTripleW.c  ComplexFunctionTripleW.h  ComplexFunctionW.c  ComplexFunctionW.h  ComplexFunctionWLoop.c  ComplexFunctionWLoop.h  ComplexToRealFunction.c  ComplexToRealFunction.h  ComplexToRealFunctionBuffered.c  ComplexToRealFunctionBuffered.h  ComplexToRealFunctionBufferedLoop.c  ComplexToRealFunctionBufferedLoop.h  ComplexToRealFunctionBufferedPair.c  ComplexToRealFunctionBufferedPair.h  ComplexToRealFunctionBufferedTriple.c  ComplexToRealFunctionBufferedTriple.h  ComplexToRealFunctionLoop.c  (+46 more)
dft/jomfft/model/template/: CMakeLists.txt  CopyDef.h  CopyImpl.h  DefineMacroComplex.h  DefineMacroComplexToReal.h  DefineMacroCopyComplex.h  DefineMacroCopyReal.h  DefineMacroPairComplexToReal.h  DefineMacroPairRealToComplex.h  DefineMacroReal.h  DefineMacroRealToComplex.h  FunctionBufferedDef.h  FunctionBufferedImpl.h  FunctionBufferedLoopDef.h  FunctionBufferedLoopImpl.h  FunctionBufferedPairDef.h  FunctionBufferedPairDef_.h  FunctionBufferedPairImpl.h  FunctionBufferedPairImpl_.h  FunctionBufferedTripleDef.h  FunctionBufferedTripleDef_.h  FunctionBufferedTripleImpl.h  FunctionBufferedTripleImpl_.h  FunctionDef.h  FunctionImpl.h  FunctionLoopDef.h  FunctionLoopImpl.h  FunctionPairDef.h  FunctionPairDef_.h  FunctionPairImpl.h  FunctionPairImpl_.h  FunctionPairWDef.h  FunctionPairWDef_.h  FunctionPairWImpl.h  FunctionPairWImpl_.h  FunctionTripleDef.h  FunctionTripleImpl.h  FunctionTripleWDef.h  FunctionTripleWDef_.h  FunctionTripleWImpl.h  (+8 more)
dft/jomfft/rdft/: BatchDft.c  BatchDft.h  CMakeLists.txt  Dft.c  Dft.h  EvenSizeBatch.c  EvenSizeBatch.h  EvenSizeDft.c  EvenSizeDft.h  MainDft.c  MainDft.h
dft/jomfft/rdft/bluestein/: BatchDft.c  BatchDft.h  Bluestein.h  CMakeLists.txt  Dft.c  Dft.h  EvenSizeBatchDft.c  EvenSizeBatchDft.h  EvenSizeDft.c  EvenSizeDft.h
dft/jomfft/rdft/cooleyturkey/: BatchDft.c  BatchDft.h  CMakeLists.txt  CooleyTurkey.h  Dft.c  Dft.h  EvenSizeBatchDft.c  EvenSizeBatchDft.h  EvenSizeDft.c  EvenSizeDft.h
dft/jomfft/rdft/core/: CMakeLists.txt  ComplexToPairDft.c  ComplexToPairDft.h  Core.h  EvenSizeStrideBatchDft.c  EvenSizeStrideBatchDft.h  EvenSizeTwiddleDft.c  EvenSizeTwiddleDft.h  StrideBatchDft.c  StrideBatchDft.h
dft/jomfft/rdft/singleton/: CMakeLists.txt  EvenSizeStrideBatchDft.c  EvenSizeStrideBatchDft.h  StrideBatchDft.c  StrideBatchDft.h
dft/jomfft/rdft/square/: CMakeLists.txt  EvenSizeBatchDft.c  EvenSizeBatchDft.h  EvenSizeDft.c  EvenSizeDft.h
test/jomfft/cdft/core/: BatchMultiplyFunctionTest.c  BatchMultiplyFunctionTest.h  BatchMultiplyTest.c  BatchMultiplyTest.h  CMakeLists.txt  InnerBatchDftFunctionTest.c  InnerBatchDftFunctionTest.h  InnerBatchDftTest.c  InnerBatchDftTest.h  PairSquareTwiddleDftFunctionTest.c  PairSquareTwiddleDftFunctionTest.h  PairSquareTwiddleDftTest.c  PairSquareTwiddleDftTest.h  RegisterTest.c  RegisterTest.h  SquareSplitTwiddleDftFunctionTest.c  SquareSplitTwiddleDftFunctionTest.h  SquareSplitTwiddleDftTest.c  SquareSplitTwiddleDftTest.h  StrideBatchDftFunctionTest.c  StrideBatchDftFunctionTest.h  StrideBatchDftTest.c  StrideBatchDftTest.h  TransposeDftTwiddleFunctionTest.c  TransposeDftTwiddleFunctionTest.h  TransposeDftTwiddleTest.c  TransposeDftTwiddleTest.h  TwiddleDftBackwardTest.h  TwiddleDftFunctionTest.c  TwiddleDftFunctionTest.h  TwiddleDftTest.c  TwiddleDftTest.h
test/jomfft/cdft/singleton/: CMakeLists.txt  InnerBatchDftFunctionTest.c  InnerBatchDftFunctionTest.h  InnerBatchDftTest.c  InnerBatchDftTest.h  RegisterTest.c  RegisterTest.h  StrideBatchDftFunctionTest.c  (+3 more)
test/jomfft/rdft/: BatchDftTest.c  BatchDftTest.h  BatchDftTest_.c  BatchDftTest_.h  CMakeLists.txt  DftTest.c  DftTest.h  DftTest_.c  DftTest_.h  InnerBatchDftTest.c  InnerBatchDftTest.h  OuterBatchDftTest.c  OuterBatchDftTest.h  RegisterTest.c  RegisterTest.h  TransposeDftTest.c  TransposeDftTest.h
util/jomfft/util/: CMakeLists.txt  ComplexTensor.c  ComplexTensor.h  ComplexUtil.c  ComplexUtil.h  GetOpt.h  RealTensor.c  RealTensor.h  RealUtil.c  RealUtil.h  TensorShape.c  TensorShape.h  TensorUtil.c  TensorUtil.h  Util_.h  Variadic.c  Variadic.h
(+1397 files in other folders)
