cmake_minimum_required(VERSION 3.21)

add_subdirectory(template)

target_sources(${OBJLIB} PRIVATE
ComplexCopy.c
ComplexFunction.c
ComplexFunctionBuffered.c
ComplexFunctionBufferedLoop.c
ComplexFunctionBufferedNestedLoop.c
ComplexFunctionBufferedPair.c
ComplexFunctionBufferedTriple.c
ComplexFunctionLoop.c
ComplexFunctionPair.c
ComplexFunctionPairW.c
ComplexFunctionTriple.c
ComplexFunctionTripleW.c
ComplexFunctionW.c
ComplexFunctionWLoop.c
ComplexToRealFunction.c
ComplexToRealFunctionBuffered.c
ComplexToRealFunctionBufferedLoop.c
ComplexToRealFunctionBufferedPair.c
ComplexToRealFunctionBufferedTriple.c
ComplexToRealFunctionLoop.c
ComplexToRealFunctionPair.c
ComplexToRealFunctionPairW.c
ComplexToRealFunctionTripleW.c
ComplexToRealFunctionW.c
ComplexToRealFunctionWLoop.c
ComplexTranspose.c
ConjugateEvenCopy.c
RealCopy.c
RealFunction.c
RealToComplexFunction.c
RealToComplexFunctionBuffered.c
RealToComplexFunctionBufferedLoop.c
RealToComplexFunctionBufferedPair.c
RealToComplexFunctionBufferedTriple.c
RealToComplexFunctionLoop.c
RealToComplexFunctionPair.c
RealToComplexFunctionPairW.c
RealToComplexFunctionTripleW.c
RealToComplexFunctionW.c
RealToComplexFunctionWLoop.c
SplitComplexCopy.c
ThreadingUtil.c
ComplexCopy.h
ComplexFunction.h
ComplexFunctionBuffered.h
ComplexFunctionBufferedLoop.h
ComplexFunctionBufferedNestedLoop.h
ComplexFunctionBufferedPair.h
ComplexFunctionBufferedTriple.h
ComplexFunctionLoop.h
ComplexFunctionPair.h
ComplexFunctionPairW.h
ComplexFunctionTriple.h
ComplexFunctionTripleW.h
ComplexFunctionW.h
ComplexFunctionWLoop.h
ComplexToRealFunction.h
ComplexToRealFunctionBuffered.h
ComplexToRealFunctionBufferedLoop.h
ComplexToRealFunctionBufferedPair.h
ComplexToRealFunctionBufferedTriple.h
ComplexToRealFunctionLoop.h
ComplexToRealFunctionPair.h
ComplexToRealFunctionPairW.h
ComplexToRealFunctionTripleW.h
ComplexToRealFunctionW.h
ComplexToRealFunctionWLoop.h
ComplexTranspose.h
ConjugateEvenCopy.h
Model.h
RealCopy.h
RealFunction.h
RealToComplexFunction.h
RealToComplexFunctionBuffered.h
RealToComplexFunctionBufferedLoop.h
RealToComplexFunctionBufferedPair.h
RealToComplexFunctionBufferedTriple.h
RealToComplexFunctionLoop.h
RealToComplexFunctionPair.h
RealToComplexFunctionPairW.h
RealToComplexFunctionTripleW.h
RealToComplexFunctionW.h
RealToComplexFunctionWLoop.h
SplitComplexCopy.h
ThreadingUtil.h
)